--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -282,33 +282,32 @@ nav {
 /*Laget en grid slik at bilde og innledningsteksten står ved siden av hverandre*/
 .campus-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    grid-template-columns: 1fr 1fr; 
+    gap: 20px; 
     padding: 60px;
 }
-
 /*Gjelder for overskriften til siden*/
 .campus-overskrift {
     font-size: 2.5rem;
 
 }
-
 /*Gjelder for innledningen øverst*/
 .campus-innledning {
     font-size: 1.1rem;
 
 }
-
 /*Gjelder for tittelen til det først avsnittet*/
 .første-avsnitt-tittel {
     text-align: center;
-
+    
 }
-
 /*Gjelder det første avsnittet*/
 .første-avsnitt {
     margin: 0 50px 0 50px;
-    padding: 35px 60px 40px 60px;
+    padding-bottom: 35px;
+    padding-left: 60px;
+    padding-right: 40px;
+    padding-top: 30px;
     font-size: 20px;
 }
 
@@ -317,70 +316,75 @@ nav {
     display: grid;
     grid-template-columns: 2fr 2fr;
     grid-template-rows: repeat(2, min-content);
-    place-items: center;
     gap: 10px;
-    padding-bottom: 20px;
+    padding-bottom: 70px;
+    padding-top: 100px;
 }
-
 /*Gjelder alle områdene på p35 f.eks. grupperom, studiesal...*/
 .område-overskrift {
-    padding: 20px 0 0 80px;
+    padding-bottom: 10px;
+    padding-left: 80px;
     text-align: left;
 }
-
 /*Laget margin for å bestemme lengden på setningene*/
 .campus-fasiliteter {
     margin: 30px;
     padding-left: 45px;
+    font-size: 17px
 }
-
 /*Plasserer bildene øverst*/
 .øvrebilde {
-    grid-column: 1 / -1;
-    width: 250px;
-    height: 200px;
-    object-fit: cover;
+  grid-column: 1 / -1;
+  width: 250px;
+  height: 200px;
+  object-fit: cover;
 }
-
 /*Plasserer bildene nederst*/
 .nedrebilde {
-    grid-row: 1 / 3;
-    grid-column: 3 / 3;
-    width: 250px;
-    height: 410px;
-    object-fit: cover;
+  grid-row: 1 / 3;
+  grid-column: 3 / 3;
+  width: 250px;
+  height: 410px;
+  object-fit: cover;
 }
-
 /*Gjelder siste avsnitt på siden*/
 .siste-avsnitt {
-    margin: 0 50px 0 50px;
-    padding: 65px 60px 30px 60px;
-    font-size: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-left: 60px;
+    padding-right: 30px;
+    font-size: 17px;
 }
 
 /*Gjelder linken nederst*/
-.link-campus {
+.link-campus    {
     padding: 5px;
     text-align: center;
     margin-bottom: 25px;
 }
-
+/*Gjør at linken blir synlig*/
 .farge-link-campus {
     color: blue
 }
-
 /*En grid som gjelder teksten og bildene om de forskjellige områdene.
   Bildene og teksten blir plassert ved siden av hverandre.
 */
-.område-container {
+.område-container  {
     display: grid;
-    grid-template-columns: 2fr 2fr;
+    grid-template-columns:2fr  2fr;
     grid-template-rows: repeat(2, min-content);
     place-items: center;
-    gap: 10px;
     padding-left: 15px;
     padding-right: 15px;
 }
+/*For å plassere bildeteksten til venste ved bruk av grid*/
+.bilde_tekst {
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
 
 
 
