--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,336 +2,341 @@
 /* Generelt*/
 /************/
 * {
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Nunito', sans-serif;
-
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Nunito", sans-serif;
 }
 
 body {
-    background-color: white;
-    margin: 0 auto;
+  background-color: white;
+  margin: 0 auto;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
+a:hover{
+    text-decoration: underline;
+}
 
 ul li {
-    margin: 10px;
+  margin: 10px;
 }
 
 p {
-    line-height: 1.6;
-    text-align: left;
-
+  line-height: 1.6;
+  text-align: left;
 }
 
 img {
-    /* skalering av alle img */
-    width: 100%;
-    height: auto;
+  /* skalering av alle img */
+  width: 100%;
+  height: auto;
 }
 
 nav {
-    padding: 5px;
+  padding: 5px;
 }
-
 
 /**************************/
 /****** HEADER *************/
 /**************************/
 .index-header {
-    position: sticky;
-    /* fester header til sin posisjon*/
-    display: flex;
-    justify-content: space-between;
-    /*forflytter logo og nav på hver sin side*/
-    padding: 10px;
-    background-color: #4989CA;
-    width: 100%;
-    top: 0;
-    z-index: 2;
+  position: sticky;
+  /* fester header til sin posisjon*/
+  display: flex;
+  justify-content: space-between;
+  /*forflytter logo og nav på hver sin side*/
+  padding: 10px;
+  background-color: #4989ca;
+  width: 100%;
+  top: 0;
+  z-index: 2; /*flytter header øverst foran alt innhold*/
 }
 
 /*navigasjonsbar*/
-
 .navigations {
-    display: flex;
-    list-style-type: none;
+  display: flex;
+  list-style-type: none;
 }
 
 /* css av lenker til navigering */
-/* Dropdown menu css fra: https://www.w3schools.com/Css/tryit.asp?filename=trycss_dropdown_navbar2 */
+/* Nedtrekksmeny css fra: https://www.w3schools.com/Css/tryit.asp?filename=trycss_dropdown_navbar2 */
 
 .nav-buttons a,
 .dropbutton {
-    color: black;
-    font-variant-caps: all-small-caps;
-    font-size: 1.7rem;
-    font-weight: 900;
-    padding: 10px 15px;
-    display: none;
+  color: black;
+  font-variant-caps: all-small-caps;
+  font-size: 1.7rem;
+  font-weight: 900;
+  padding-top:10px;
+  padding-bottom:10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: none;
 }
 
-/* Dropdown meny start */
+/* Nedtrekksmeny start */
 .nav-buttons a:hover,
 .dropmenu:hover .dropbutton {
-    color: #312e2e;
+  color: #312e2e;
 }
 
 .nav-buttons.dropmenu {
-    display: flex;
-    /*fleksibel meny som åpner sidelengs*/
+  display: flex;
+  /*fleksibel meny som åpner sidelengs*/
 }
 
 .nav-logo {
-    /*utforming av oslomet-logo*/
-    width: 80px;
-    height: auto;
-    align-self: center;
-    margin-left: 5%;
+  /*utforming av oslomet-logo*/
+  width: 80px;
+  height: auto;
+  align-self: center;
+  margin-left: 5%;
 }
 
+/* utforming av nedtrekksmenu*/
 .dropmenu-content {
-    min-width: 160px;
-    z-index: 1;
-    display: flex;
+  z-index: 1;
+  display: flex;
 }
 
+/*lenker inni nedtrekksmenyen*/
 .dropmenu-content a {
-    color: black;
-    padding: 12px 16px;
-    display: block;
-
+  color: black;
+  padding: 12px 16px;
+  display: block;
 }
 
 .dropmenu-content a:hover {
-    background-color: #dae5e9;
+  background-color: #dae5e9;
 }
 
-.dropmenu:hover .dropmenu-content {
-    display: flex;
+.dropmenu:hover{
+  display: flex;
 }
-
-.fa {
-    display: none;
-}
-
-/* Dropdown-meny slutt */
-
+/* Nedtrekksmeny slutt */
 
 /*********/
 /*FOOTER*/
 /*********/
 
-
 .footer {
-    border-top: 1px solid #eee;
-    padding: 1rem 0;
-    background-color: #4989CA;
+  border-top: 1px solid #eee;
+  padding: 1rem 0;
+  background-color: #4989ca;
 }
 
 .container-footer {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 /*Dette er logo kolonnen (den venstre kolonnnen)*/
 .logo-kolonne {
-    display: flex;
-    flex-direction: column;
-    padding: 0 50px;
+  display: flex;
+  flex-direction: column;
+  padding: 0 50px;
 }
 
 .logo-footer {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .sosiale-medier {
-    list-style: none;
-    display: flex;
-    gap: 1.5rem;
+  list-style: none;
+  display: flex;
+  gap: 1.5rem;
 }
 
 .sosiale-link:hover,
 .sosiale-link:active,
 .footer-link:hover,
 .footer-link:active {
-    color: #ccc;
+  color: #ccc;
 }
 
 /**Dette er kontakt oss kolonnen (venstre kolonne**/
 
 .adresse-kolonne {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding-right: 70px;
-
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding-right: 70px;
 }
 
 .adresse-tittel {
-    font-size: 25px;
-    font-weight: bold;
-    margin: 5px 0 2px 0;
+  font-size: 25px;
+  font-weight: bold;
+  margin: 5px 0 2px 0;
 }
-
 
 /**************/
 /*INDEX SIDEN */
 /**************/
 .index-content {
-    display: flex;
-    flex-direction: column;
-    /* alt innhold ligger etter hverandre i en kolonne */
-    justify-content: center;
-    /*sentrer alt innhold*/
-    align-items: center;
-    padding: 20px;
+  display: flex;
+  flex-direction: column;
+  /* alt innhold ligger etter hverandre i en kolonne */
+  justify-content: center;
+  /*sentrer alt innhold*/
+  align-items: center;
+  padding: 20px;
 }
 
 .index-image {
-    width: 75%;
-    flex: 1;
+  width: 75%;
+  flex: 1;
 }
 
 .index-intro {
-    flex: 1;
-    width: 75%;
-    border: 1px solid #D4D4D4;
-    border-top: none;
-    background-color: white;
+  flex: 1;
+  width: 75%;
+  border-width: 1px;
+  border-style: solid;
+  border-color:  #d4d4d4;
+  border-top: none;
+  background-color: white;
 }
 
 .index-intro h1 {
-    background-color: #4989CA;
-    text-align: center;
-    font-size: 3em;
+  background-color: #4989ca;
+  text-align: center;
+  font-size: 3em;
 }
 
 .index-innlegg {
-    padding: 0 15px;
+  padding-top: 0;
+  padding-bottom:0;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .headings {
-    flex: 1;
-    width: 75%;
-    padding-top: 20px;
+  flex: 1;
+  width: 75%;
+  padding-top: 20px;
 }
 
 /* fremhevede artikler */
 
 .index-highlights {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    /*deler området i 3 like kolonner*/
-    grid-template-rows: auto;
-    border-top: 1px solid #d4d4d4;
-    background-color: white;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /*deler området i 3 like kolonner*/
+  grid-template-rows: auto;
+  border-top-width: 1px;
+  border-top-style:  solid;
+  border-top-color: #d4d4d4;
+  background-color: white;
 }
 
 /* artiklene inni */
 
 .articles {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    /*deler området i 8 like kolonner*/
-    grid-template-rows: repeat(6, 1fr);
-    /*deler området i 6 like rader*/
-    margin: 20px 0;
-    /* 20px topp og bunn, 0 for venstre og høyre */
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  /*deler området i 8 like kolonner*/
+  grid-template-rows: repeat(6, 1fr);
+  /*deler området i 6 like rader*/
+  margin-top: 20px;
+  margin-bottom:20px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 /* bildene til artiklene */
 .articles-picture {
-    grid-area: 1 / 1 / 7 / 9;
-    /* dekke radene fra 1 til 7 og kolonnene fra 1 til 8*/
-    display: flex;
+  grid-column-start: 1;
+  grid-column-end:7;
+  grid-row-start: 1;
+  grid-row-end: 9;
+  /* dekke radene fra 1 til 7 og kolonnene fra 1 til 8*/
+  display: flex;
 }
 
 /* for å bildene skal fylle boksene */
 .cover-articles {
-    object-fit: cover;
+  object-fit: cover;
 }
 
 /* artikkel innhold */
 .articles-content {
-    grid-area: 2 / 2 / 6 / 8;
-    background-color: white;
-    opacity: 90%;
-    padding: 10px;
+  grid-column-start: 2;
+  grid-column-end:6;
+  grid-row-start: 2;
+  grid-row-end: 8;
+  background-color: white;
+  opacity: 90%;
+  padding: 10px;
 }
 
 /* KART */
 .overskriftkart {
-    text-align: center;
+  text-align: center;
 }
 
 .kart {
-    padding: 3rem;
+  padding: 3rem;
 }
-
-
 
 /*********************************/
 /**CAMPUS OG ACCESSIBILITY SIDEN**/
 /*********************************/
 /*Laget en grid slik at bilde og innledningsteksten står ved siden av hverandre*/
 .campus-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr; 
-    gap: 20px; 
-    padding: 60px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  padding: 60px;
 }
+
 /*Gjelder for overskriften til siden*/
 .campus-overskrift {
-    font-size: 2.5rem;
-
+  font-size: 2.5rem;
 }
+
 /*Gjelder for innledningen øverst*/
 .campus-innledning {
-    font-size: 1.1rem;
-
+  font-size: 1.1rem;
 }
+
 /*Gjelder for tittelen til det først avsnittet*/
 .første-avsnitt-tittel {
-    text-align: center;
-    
+  text-align: center;
 }
+
 /*Gjelder det første avsnittet*/
 .første-avsnitt {
-    margin: 0 50px 0 50px;
-    padding-bottom: 35px;
-    padding-left: 60px;
-    padding-right: 40px;
-    padding-top: 30px;
-    font-size: 20px;
+  margin: 0 50px 0 50px;
+  padding: 35px 60px 40px 60px;
+  font-size: 20px;
 }
 
 /*En grid for å lage en bilde kolasj*/
 .image-wrapper {
-    display: grid;
-    grid-template-columns: 2fr 2fr;
-    grid-template-rows: repeat(2, min-content);
-    gap: 10px;
-    padding-bottom: 70px;
-    padding-top: 100px;
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  grid-template-rows: repeat(2, min-content);
+  place-items: center;
+  gap: 10px;
+  padding-bottom: 20px;
 }
+
 /*Gjelder alle områdene på p35 f.eks. grupperom, studiesal...*/
 .område-overskrift {
-    padding-bottom: 10px;
-    padding-left: 80px;
-    text-align: left;
+  padding: 20px 0 0 80px;
+  text-align: left;
 }
+
 /*Laget margin for å bestemme lengden på setningene*/
 .campus-fasiliteter {
-    margin: 30px;
-    padding-left: 45px;
-    font-size: 17px
+  margin: 30px;
+  padding-left: 45px;
 }
+
 /*Plasserer bildene øverst*/
 .øvrebilde {
   grid-column: 1 / -1;
@@ -339,6 +344,7 @@ nav {
   height: 200px;
   object-fit: cover;
 }
+
 /*Plasserer bildene nederst*/
 .nedrebilde {
   grid-row: 1 / 3;
@@ -347,265 +353,251 @@ nav {
   height: 410px;
   object-fit: cover;
 }
+
 /*Gjelder siste avsnitt på siden*/
 .siste-avsnitt {
-    margin-left: 50px;
-    margin-right: 50px;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    padding-left: 60px;
-    padding-right: 30px;
-    font-size: 17px;
+  margin: 0 50px 0 50px;
+  padding: 65px 60px 30px 60px;
+  font-size: 20px;
 }
 
 /*Gjelder linken nederst*/
-.link-campus    {
-    padding: 5px;
-    text-align: center;
-    margin-bottom: 25px;
+.link-campus {
+  padding: 5px;
+  text-align: center;
+  margin-bottom: 25px;
 }
-/*Gjør at linken blir synlig*/
+
 .farge-link-campus {
-    color: blue
+  color: blue;
 }
+
 /*En grid som gjelder teksten og bildene om de forskjellige områdene.
   Bildene og teksten blir plassert ved siden av hverandre.
 */
-.område-container  {
-    display: grid;
-    grid-template-columns:2fr  2fr;
-    grid-template-rows: repeat(2, min-content);
-    place-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
+.område-container {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  grid-template-rows: repeat(2, min-content);
+  place-items: center;
+  gap: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
-/*For å plassere bildeteksten til venste ved bruk av grid*/
-.bilde_tekst {
-    grid-column-start: 1;
-    grid-column-end: 4;
-}
-
 
 /***************/
 /*TOPICAL PAGE*/
 /**************/
 
-
 .overskriftmartphones {
-    font-size: 2.5rem;
-    padding: 2rem 2rem;
-    text-align: center;
+  font-size: 2.5rem;
+  padding: 2rem 2rem;
+  text-align: center;
 }
 
 .topical-head {
-    background-color: rgb(194, 194, 183);
+  background-color: rgb(194, 194, 183);
 }
 
 .topical-p {
-    font-size: 1.4rem;
-    padding-top: 1.7rem;
+  font-size: 1.4rem;
+  padding-top: 1.7rem;
 }
 
 .topical-h2 {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 .topic-image {
-    padding: 20px;
-    position: relative;
-    height: 550px;
-    overflow: hidden;
+  padding: 20px;
+  position: relative;
+  height: 550px;
+  overflow: hidden;
 }
 
 .topic-image video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .topic-container {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding-left: 30px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: rgb(194, 194, 183);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  padding: 35px;
+  border-width: 3px;
+  border-style: solid;
+  border-color: white;
+  text-align: left;
 }
 
 .tekstvideo {
-    font-size: 1em;
-    
+  font-size: 1em;
 }
 
 .topic-container h1 {
-    font-weight: 400;
-    font-size: 50px;
-    padding-bottom: 15px;
+  font-weight: 400;
+  font-size: 50px;
+  padding-bottom: 15px;
 }
 
 .section-smartphone {
-    height: 700px;
-    padding: 40px 30px 0px 30px;
+  height: 700px;
+  padding: 40px 30px 0px 30px;
 }
 
 .topical-body {
-    background-color: rgb(227, 227, 219);
-
+  background-color: rgb(227, 227, 219);
 }
 
 .smartphone-image {
-    text-align: center;
-    width: 33%;
-    float: left;
+  text-align: center;
+  width: 33%;
+  float: left;
 }
 
 .smartphone-image p {
-    font-size: 20px;
-    padding-left: 20px;
+  font-size: 20px;
+  padding-left: 20px;
 }
 
 .smartphone-image h3 {
-    padding-bottom: 15px;
-    margin-top: 15px;
+  padding-bottom: 15px;
+  margin-top: 15px;
 }
 
 .smartphone-image img {
-    display: block;
-    width: 100%;
-    height: 200px;
-    cursor: pointer;
-    border-radius: 5px;
+  display: block;
+  width: 100%;
+  height: 200px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .wrapper {
-    max-width: 1200px;
-    width: 95%;
-    margin: 80px auto;
-    background: white;
-    border: 2px solid black;
-    border-radius: 15px;
+  max-width: 1200px;
+  width: 95%;
+  margin: 80px auto;
+  background: white;
+  border: 2px solid black;
+  border-radius: 15px;
 }
 
 .wrapper-columns {
-    margin: 5px 0;
-    display: flex;
+  margin: 5px 0;
+  display: flex;
 
-    margin: 5px 0;
+  margin: 5px 0;
 }
 
 .phone-box {
-    flex: 1;
-    margin: 2px;
-    padding: 10px;
-    transition: 0.3s;
+  flex: 1;
+  margin: 2px;
+  padding: 10px;
+  transition: 0.3s;
 }
 
 .box-phone {
-    max-width: 100%;
-    height: auto
+  max-width: 100%;
+  height: auto;
 }
-
 
 /****Media-Query**/
 /*****TABLETS*****/
 /*****************/
 @media screen and (max-width: 768px) {
+  /* navigasjonsbar */
+  .dropmenu-content {
+    display: none;
+    font-size: 10px;
+  }
 
-    /* navigasjonsbar */
+  .nav-buttons.dropmenu {
+    flex-direction: column;
+  }
 
-    .dropmenu-content {
-        display: none;
-        font-size: 10px;
-    }
+  .nav-buttons a,
+  .dropbutton {
+    display: flex;
+    font-variant-caps: all-small-caps;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom:10px;
+    padding-left: 15;
+    padding-right: 15px;
+    font-size: 1.2rem;
+  }
 
-    .nav-buttons.dropmenu {
-        flex-direction: column;
-    }
+  .dropmenu:hover .dropmenu-content {
+    flex-direction: column;
+    justify-content: center;
+  }
 
-    .nav-buttons a,
-    .dropbutton {
-        display: flex;
-        font-variant-caps: all-small-caps;
-        text-align: center;
-        padding: 10px 15px;
-        font-size: 1.2rem;
-    }
+  /* campus side */
+  .campus-container {
+    grid-template-columns: 1fr 1fr;
+  }
 
-    .dropmenu:hover .dropmenu-content {
-        flex-direction: column;
-        justify-content: center;
-    }
+  .område-container {
+    display: grid;
+    grid-template-columns: 2fr;
+    grid-template-rows: repeat(2, min-content);
+    place-items: center;
+    gap: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 
+  .campus-container {
+    padding: 40px;
+    grid-template-columns: 1fr;
+    /* Two columns */
+  }
 
-    /* campus side */
-    .campus-container {
-        grid-template-columns: 1fr 1fr;
+  /* index-side */
+  .index-highlights {
+    display: flex;
+    flex-direction: column;
+  }
 
-    }
+  /* topical-side */
 
-    .område-container {
-        display: grid;
-        grid-template-columns: 2fr;
-        grid-template-rows: repeat(2, min-content);
-        place-items: center;
-        gap: 10px;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
+  .wrapper-columns {
+    flex-flow: column;
+  }
 
-    .campus-container {
-        padding: 40px;
-        grid-template-columns: 1fr;
-        /* Two columns */
+  .wrapper {
+    max-width: 1000px;
+    width: 95%;
+    margin: 70px auto;
 
-    }
+    border-radius: 15px;
+  }
 
-    /* index-side */
-    .index-highlights {
-        display: flex;
-        flex-direction: column;
-    }
+  .smartphone-image {
+    width: 100%;
+    float: none;
+  }
 
-    /* topical-side */
-
-
-    .wrapper-columns {
-        flex-flow: column;
-    }
-
-    .wrapper {
-        max-width: 1000px;
-        width: 95%;
-        margin: 70px auto;
-
-        border-radius: 15px;
-    }
-
-    .smartphone-image {
-        width: 100%;
-        float: none;
-    }
-
-    .section-smartphone {
-        margin-bottom: 690px;
-    }
+  .section-smartphone {
+    margin-bottom: 690px;
+  }
 }
 
 @media screen and (max-width: 600px) {
-    .campus-intro {
-        font-size: 1rem;
+  .campus-intro {
+    font-size: 1rem;
 
-        padding-left: 5px;
-    }
+    padding-left: 5px;
+  }
 
-    .section-smartphone {
-        margin-bottom: 790px;
-    }
-
-
+  .section-smartphone {
+    margin-bottom: 790px;
+  }
 }
