--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,7 +22,7 @@ a:hover{
 }
 
 ul li {
-  margin: 10px;
+  margin:0.625em;
 }
 
 p {
@@ -71,10 +71,7 @@ nav {
   font-variant-caps: all-small-caps;
   font-size: 1.7rem;
   font-weight: 900;
-  padding-top:10px;
-  padding-bottom:10px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 10px 15px;
   display: none;
 }
 
@@ -209,10 +206,8 @@ nav {
 }
 
 .index-innlegg {
-  padding-top: 0;
-  padding-bottom:0;
-  padding-left: 15px;
-  padding-right: 15px;
+    padding: 0 15px;
+
 }
 
 .headings {
@@ -228,9 +223,7 @@ nav {
   grid-template-columns: repeat(3, 1fr);
   /*deler området i 3 like kolonner*/
   grid-template-rows: auto;
-  border-top-width: 1px;
-  border-top-style:  solid;
-  border-top-color: #d4d4d4;
+  border-top: 1px solid #d4d4d4;
   background-color: white;
 }
 
@@ -242,18 +235,14 @@ nav {
   /*deler området i 8 like kolonner*/
   grid-template-rows: repeat(6, 1fr);
   /*deler området i 6 like rader*/
-  margin-top: 20px;
-  margin-bottom:20px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 20px;
+
 }
 
 /* bildene til artiklene */
 .articles-picture {
-  grid-column-start: 1;
-  grid-column-end:9;
-  grid-row-start: 1;
-  grid-row-end: 8;
+    grid-column: 1 / 9;
+    grid-row: 1 / 8; 
   /* dekke radene fra 1 til 7 og kolonnene fra 1 til 8*/
   display: flex;
 }
@@ -265,10 +254,8 @@ nav {
 
 /* artikkel innhold */
 .articles-content {
-  grid-column-start: 2;
-  grid-column-end:8;
-  grid-row-start: 2;
-  grid-row-end: 6;
+    grid-column: 2 / 8;
+    grid-row: 2 / 6;
   background-color: white;
   opacity: 90%;
   padding: 10px;
@@ -292,6 +279,8 @@ nav {
     grid-template-columns: 1fr 1fr; 
     gap: 20px; 
     padding: 60px;
+    place-items: center; /* Sentrerer både vertikalt og horisontalt */
+
 }
 /*Gjelder for overskriften til siden*/
 .campus-overskrift {
@@ -311,8 +300,7 @@ nav {
 /*Gjelder det første avsnittet*/
 .første-avsnitt {
     margin: 45px;
-    padding-left: 60px;
-    padding-right: 40px;
+    padding: 0 40px 0 60px;
     font-size: 20px;
 }
 /*En grid som gjelder teksten og bildene om de forskjellige områdene.
@@ -322,13 +310,12 @@ nav {
     display: grid;
     grid-template-columns:2fr  2fr;
     place-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 0 15px;
+
 }
 /*For å plassere bildeteksten til venste ved bruk av grid*/
 .bilde_tekst {
-    grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column: 1 / 4;
     margin:0;
 }
 /*En grid for å lage en bilde kolasj*/
@@ -342,9 +329,9 @@ nav {
 }
 /*Gjelder alle områdene på p35 f.eks. grupperom, studiesal...*/
 .område-overskrift {
-    padding-left: 80px;
     text-align: left;
-    padding-top: 60px;
+    padding: 60px 0 0 80px;
+
 }
 /*Laget margin for å bestemme lengden på setningene*/
 .campus-fasiliteter {
@@ -369,12 +356,8 @@ nav {
 }
 /*Gjelder siste avsnitt på siden*/
 .siste-avsnitt {
-    margin-left: 50px;
-    margin-right: 50px;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    padding-left: 60px;
-    padding-right: 30px;
+    margin: 0 50px;
+    padding: 5px 30px 5px 60px;
     font-size: 17px;
 }
 
@@ -389,15 +372,12 @@ nav {
     color: blue
 }
 
-
 /***************/
 /*TOPICAL PAGE*/
 /**************/
-
 .headingtopical{
-    font-style: ;
-    font-size: 1.5em;
-    padding: 10px;
+  font-size: 1.5em;
+  padding: 10px;
 }
 
 .overskriftmartphones {
@@ -449,7 +429,8 @@ nav {
 }
 
 .tekstvideo {
-    font-style: bold;
+  font-size: 1em;
+  font-weight: bold;
 }
 
 .topic-container h1 {
@@ -512,12 +493,12 @@ nav {
   margin: 2px;
   padding: 10px;
   transition: 0.3s;
+  padding-top: 100px;
 }
 
 .box-phone {
   max-width: 100%;
   height: auto;
-  padding-top: 210px;
 }
 
 /****Media-Query**/
@@ -539,10 +520,7 @@ nav {
     display: flex;
     font-variant-caps: all-small-caps;
     text-align: center;
-    padding-top: 10px;
-    padding-bottom:10px;
-    padding-left: 15;
-    padding-right: 15px;
+    padding: 10px 15px;
     font-size: 1.2rem;
   }
 
@@ -562,8 +540,7 @@ nav {
     grid-template-rows: repeat(2, min-content);
     place-items: center;
     gap: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 0 15px;
   }
 
   .campus-container {
@@ -605,7 +582,6 @@ nav {
 @media screen and (max-width: 600px) {
   .campus-intro {
     font-size: 1rem;
-
     padding-left: 5px;
   }
 
@@ -613,3 +589,4 @@ nav {
     margin-bottom: 790px;
   }
 }
+
