--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,4 @@
+
 /*************/
 /* Generelt*/
 /************/
@@ -22,7 +23,7 @@ a:hover{
 }
 
 ul li {
-  margin: 10px;
+  margin:0.625em;
 }
 
 p {
@@ -37,7 +38,7 @@ img {
 }
 
 nav {
-  padding: 5px;
+  padding: 0.2em;
 }
 
 /**************************/
@@ -49,7 +50,7 @@ nav {
   display: flex;
   justify-content: space-between;
   /*forflytter logo og nav på hver sin side*/
-  padding: 10px;
+  padding: 0.2em;
   background-color: #4989ca;
   width: 100%;
   top: 0;
@@ -59,7 +60,7 @@ nav {
 /*navigasjonsbar*/
 .navigations {
   display: flex;
-  list-style-type: none;
+  
 }
 
 /* css av lenker til navigering */
@@ -71,10 +72,7 @@ nav {
   font-variant-caps: all-small-caps;
   font-size: 1.7rem;
   font-weight: 900;
-  padding-top:10px;
-  padding-bottom:10px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0.6em 0.9em;
   display: none;
 }
 
@@ -91,7 +89,7 @@ nav {
 
 .nav-logo {
   /*utforming av oslomet-logo*/
-  width: 80px;
+  width: 5em;
   height: auto;
   align-self: center;
   margin-left: 5%;
@@ -106,7 +104,7 @@ nav {
 /*lenker inni nedtrekksmenyen*/
 .dropmenu-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 0.7em 1em;
   display: block;
 }
 
@@ -126,7 +124,7 @@ nav {
 
 .footer {
   border-top: 1px solid #eee;
-  padding: 1rem 0;
+  padding: 0.2em 0;
   background-color: #4989ca;
 }
 
@@ -139,17 +137,12 @@ nav {
 .logo-kolonne {
   display: flex;
   flex-direction: column;
-  padding: 0 50px;
-}
-
-.logo-footer {
-  margin-bottom: 1rem;
+  padding: 0 3em;
 }
 
 .sosiale-medier {
   list-style: none;
   display: flex;
-  gap: 1.5rem;
 }
 
 .sosiale-link:hover,
@@ -165,13 +158,13 @@ nav {
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding-right: 70px;
+  padding-right: 4.3em;
 }
 
 .adresse-tittel {
-  font-size: 25px;
+  font-size: 1.5em;
   font-weight: bold;
-  margin: 5px 0 2px 0;
+  margin: 0.3em 0 0.1em 0;
 }
 
 /**************/
@@ -184,7 +177,7 @@ nav {
   justify-content: center;
   /*sentrer alt innhold*/
   align-items: center;
-  padding: 20px;
+  padding: 1.25em;
 }
 
 .index-image {
@@ -195,10 +188,8 @@ nav {
 .index-intro {
   flex: 1;
   width: 75%;
-  border-width: 1px;
-  border-style: solid;
-  border-color:  #d4d4d4;
-  border-top: none;
+  border: 0.063em solid #d4d4d4;
+  border-top: none ; 
   background-color: white;
 }
 
@@ -209,16 +200,14 @@ nav {
 }
 
 .index-innlegg {
-  padding-top: 0;
-  padding-bottom:0;
-  padding-left: 15px;
-  padding-right: 15px;
+    padding: 0 0.9em;
+
 }
 
 .headings {
   flex: 1;
   width: 75%;
-  padding-top: 20px;
+  padding-top: 1.25em;
 }
 
 /* fremhevede artikler */
@@ -228,9 +217,7 @@ nav {
   grid-template-columns: repeat(3, 1fr);
   /*deler området i 3 like kolonner*/
   grid-template-rows: auto;
-  border-top-width: 1px;
-  border-top-style:  solid;
-  border-top-color: #d4d4d4;
+  border-top: 0.063em solid #d4d4d4;
   background-color: white;
 }
 
@@ -242,18 +229,14 @@ nav {
   /*deler området i 8 like kolonner*/
   grid-template-rows: repeat(6, 1fr);
   /*deler området i 6 like rader*/
-  margin-top: 20px;
-  margin-bottom:20px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 1.25em;
+
 }
 
 /* bildene til artiklene */
 .articles-picture {
-  grid-column-start: 1;
-  grid-column-end:9;
-  grid-row-start: 1;
-  grid-row-end: 8;
+    grid-column: 1 / 9;
+    grid-row: 1 / 8; 
   /* dekke radene fra 1 til 7 og kolonnene fra 1 til 8*/
   display: flex;
 }
@@ -265,13 +248,11 @@ nav {
 
 /* artikkel innhold */
 .articles-content {
-  grid-column-start: 2;
-  grid-column-end:8;
-  grid-row-start: 2;
-  grid-row-end: 6;
+    grid-column: 2 / 8;
+    grid-row: 2 / 6;
   background-color: white;
   opacity: 90%;
-  padding: 10px;
+  padding: 0.625em;
 }
 
 /* KART */
@@ -280,7 +261,7 @@ nav {
 }
 
 .kart {
-  padding: 3rem;
+  padding: 3em;
 }
 
 /*********************************/
@@ -290,17 +271,19 @@ nav {
 .campus-container {
     display: grid;
     grid-template-columns: 1fr 1fr; 
-    gap: 20px; 
-    padding: 60px;
+    gap: 1.25em;
+    padding: 3.75em;
+    place-items: center; /* Sentrerer både vertikalt og horisontalt */
+
 }
 /*Gjelder for overskriften til siden*/
 .campus-overskrift {
-    font-size: 2.5rem;
+    font-size: 2.5em;
 
 }
 /*Gjelder for innledningen øverst*/
 .campus-innledning {
-    font-size: 1.15rem;
+    font-size: 1.1em;
 
 }
 /*Gjelder for tittelen til det først avsnittet*/
@@ -310,10 +293,9 @@ nav {
 }
 /*Gjelder det første avsnittet*/
 .første-avsnitt {
-    margin: 45px;
-    padding-left: 60px;
-    padding-right: 40px;
-    font-size: 1.1rem;
+    margin: 2.8em;
+    padding: 0 2.5em 0 3.75em;
+    font-size: 1.25em;
 }
 /*En grid som gjelder teksten og bildene om de forskjellige områdene.
   Bildene og teksten blir plassert ved siden av hverandre.
@@ -322,13 +304,12 @@ nav {
     display: grid;
     grid-template-columns:2fr  2fr;
     place-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 0 0.9em;
+
 }
 /*For å plassere bildeteksten til venste ved bruk av grid*/
 .bilde_tekst {
-    grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column: 1 / 4;
     margin:0;
 }
 /*En grid for å lage en bilde kolasj*/
@@ -336,42 +317,49 @@ nav {
     display: grid;
     grid-template-columns: 2fr 2fr;
     grid-template-rows: repeat(2, min-content);
-    gap: 10px;
-    padding-top: 45px;
-    margin: 0px;
+    gap: 0.625em;
+    padding-top: 2.8em;
+    margin: 0em;
 }
 /*Gjelder alle områdene på p35 f.eks. grupperom, studiesal...*/
 .område-overskrift {
-    padding-left: 80px;
     text-align: left;
-    padding-top: 60px;
+    padding: 3.75em 0 0 5em
+
 }
 /*Laget margin for å bestemme lengden på setningene*/
 .campus-fasiliteter {
-    margin: 30px;
-    padding-left: 45px;
-    font-size: 1rem
+    margin:1.87em;
+    padding-left: 2.81em;
+    font-size: 1.1em;
 }
 /*Plasserer bildene øverst*/
 .øvrebilde {
   grid-column: 1 / -1;
-  width: 250px;
-  height: 200px;
+  width: 15.6em;
+  height: 12.5em;
   object-fit: cover;
 }
 /*Plasserer bildene nederst*/
 .nedrebilde {
   grid-row: 1 / 3;
   grid-column: 3 / 3;
-  width: 250px;
-  height: 410px;
+  width:15.6em;
+  height: 25.6em;
   object-fit: cover;
+}
+/*Gjelder siste avsnitt på siden*/
+.siste-avsnitt {
+    margin: 0 3.1em;
+    padding: 0.3em 1.9em 0.3em 3.7em;
+    font-size: 1.2em;
 }
 
 /*Gjelder linken nederst*/
 .link-campus    {
-    padding: 5px;
+    padding: 0.3em;
     text-align: center;
+    margin-bottom: 1.6em;
 }
 /*Gjør at linken blir synlig*/
 .farge-link-campus {
@@ -381,11 +369,9 @@ nav {
 /***************/
 /*TOPICAL PAGE*/
 /**************/
-
 .headingtopical{
-    font-style: ;
-    font-size: 1.5em;
-    padding: 10px;
+  font-size: 1.4em;
+  padding: 0.6em;
 }
 
 .overskriftmartphones {
@@ -400,17 +386,17 @@ nav {
 
 .topical-p {
   font-size: 1.4rem;
-  padding-top: 1.7rem;
+  padding-top: 1.7em;
 }
 
 .topical-h2 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .topic-image {
-  padding: 20px;
+  padding: 1.25em;
   position: relative;
-  height: 550px;
+  height: 34.4em;
   overflow: hidden;
 }
 
@@ -429,26 +415,25 @@ nav {
   left: 50%;
   transform: translate(-50%, -50%);
   color: black;
-  padding: 6px;
-  border-width: 3px;
-  border-style: solid;
-  border-color: rgb(194, 194, 183);
-  padding-left: 20px;
+  padding: 0.4em;
+  border: 1em solid rgb(194, 194, 183);
+  padding-left: 1.25em;
 }
 
 .tekstvideo {
-    font-style: bold;
+  font-size: 1em;
+  font-weight: bold;
 }
 
 .topic-container h1 {
   font-weight: 400;
-  font-size: 50px;
-  padding-bottom: 15px;
+  font-size: 3.2em;
+  padding-bottom: 1em;
 }
 
 .section-smartphone {
-  height: 700px;
-  padding: 40px 30px 0px 30px;
+  height: 43.75em; 
+  padding: 2.5em 1.9em 0 2em;
 }
 
 .topical-body {
@@ -462,50 +447,49 @@ nav {
 }
 
 .smartphone-image p {
-  font-size: 20px;
-  padding-left: 20px;
+  font-size:1.25em;
+  padding-left: 1.25em;
 }
 
 .smartphone-image h3 {
-  padding-bottom: 15px;
-  margin-top: 15px;
+  padding-bottom: 0.9em;
+  margin-top: 0.9em;
 }
 
 .smartphone-image img {
   display: block;
   width: 100%;
-  height: 200px;
+  height: 12.5em;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 0.3em;
 }
 
 .wrapper {
-  max-width: 1200px;
+  max-width: 75em;
   width: 95%;
-  margin: 80px auto;
+  margin: 5em auto;
   background: white;
-  border: 2px solid black;
-  border-radius: 15px;
+  border: 0.125em solid black;
+  border-radius: 0.9em;
 }
 
 .wrapper-columns {
-  margin: 5px 0;
+  margin: 0.3em 0;
   display: flex;
-
-  margin: 5px 0;
+  margin: 0.3em 0;
 }
 
 .phone-box {
   flex: 1;
-  margin: 2px;
-  padding: 10px;
+  margin: 0.125em;
+  padding: 0.6em; 
   transition: 0.3s;
+  padding-top: 6.25em; 
 }
 
 .box-phone {
   max-width: 100%;
   height: auto;
-  padding-top: 210px;
 }
 
 /****Media-Query**/
@@ -515,7 +499,7 @@ nav {
   /* navigasjonsbar */
   .dropmenu-content {
     display: none;
-    font-size: 10px;
+    font-size: 0.6em;
   }
 
   .nav-buttons.dropmenu {
@@ -527,10 +511,7 @@ nav {
     display: flex;
     font-variant-caps: all-small-caps;
     text-align: center;
-    padding-top: 10px;
-    padding-bottom:10px;
-    padding-left: 15;
-    padding-right: 15px;
+    padding: 10px 15px;
     font-size: 1.2rem;
   }
 
@@ -549,13 +530,12 @@ nav {
     grid-template-columns: 2fr;
     grid-template-rows: repeat(2, min-content);
     place-items: center;
-    gap: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
+    gap: 0.625em;
+    padding: 0 0.938em;
   }
 
   .campus-container {
-    padding: 40px;
+    padding: 2.5em;
     grid-template-columns: 1fr;
     /* Two columns */
   }
@@ -573,11 +553,11 @@ nav {
   }
 
   .wrapper {
-    max-width: 1000px;
+    max-width: 62.5em;
     width: 95%;
-    margin: 70px auto;
+    margin: 4.3em auto;
 
-    border-radius: 15px;
+    border-radius:0.9em;
   }
 
   .smartphone-image {
@@ -586,18 +566,19 @@ nav {
   }
 
   .section-smartphone {
-    margin-bottom: 690px;
+    margin-bottom: 43em;
   }
 }
 
 @media screen and (max-width: 600px) {
   .campus-intro {
     font-size: 1rem;
-
-    padding-left: 5px;
+    padding-left: 0.3em;
   }
 
   .section-smartphone {
-    margin-bottom: 790px;
+    margin-bottom: 49.3em
   }
 }
+
+
