--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -371,7 +371,7 @@ nav {
 /**************/
 .headingtopical{
   font-size: 1.2em;
-  padding: 0.3em;
+  padding-top: 1em;
 }
 
 .overskriftmartphones {
@@ -495,7 +495,7 @@ nav {
 /****Media-Query**/
 /*****TABLETS*****/
 /*****************/
-@media screen and (max-width: 48em) {
+@media screen and (max-width: 55em) {
   /* navigasjonsbar */
   .dropmenu-content {
     display: none;
@@ -553,11 +553,11 @@ nav {
   }
 
   .wrapper {
-    max-width: 62.5em;
+    max-width: 62.5rem;
     width: 95%;
-    margin: 4.3em auto;
+    margin: 4.3rem auto;
 
-    border-radius:0.9em;
+    border-radius:0.9eem;
   }
 
   .smartphone-image {
@@ -566,7 +566,11 @@ nav {
   }
 
   .section-smartphone {
-    margin-bottom: 43em;
+    margin-bottom: 43rem;
+  }
+  .phone-box{
+    padding-top: 2.25em; 
+
   }
 }
 
@@ -579,6 +583,14 @@ nav {
   .section-smartphone {
     margin-bottom: 49.3em
   }
+}
+
+/**MOBIL**/
+@media screen and (max-width: 27em) {
+    .section-smartphone {
+        margin-bottom: 65rem;
+      }
+     
 }
 
 
